[gd_scene load_steps=23 format=3 uid="uid://dj4lcne5o4jl0"]

[ext_resource type="Script" path="res://Old/Intro.gd" id="1_6kee1"]
[ext_resource type="Texture2D" uid="uid://cdq00svhji6ja" path="res://cutscene/intro1.png" id="2_vuer6"]
[ext_resource type="FontFile" uid="uid://06djxm4iqomb" path="res://Old/PixelGameFont.ttf" id="3_bbvun"]
[ext_resource type="Texture2D" uid="uid://c50vrtfd4ndnh" path="res://cutscene/intro2.png" id="4_b7f68"]
[ext_resource type="Texture2D" uid="uid://csd1264atb3ym" path="res://cutscene/intro3.png" id="6_bgt2e"]
[ext_resource type="Texture2D" uid="uid://iseif8r3324" path="res://cutscene/intro4.png" id="7_e40al"]
[ext_resource type="Texture2D" uid="uid://dvg4tjec23j4q" path="res://cutscene/intro4.5.png" id="8_r3mc4"]
[ext_resource type="Texture2D" uid="uid://brb4615k833a1" path="res://cutscene/intro5.png" id="9_cvlai"]
[ext_resource type="AudioStream" uid="uid://nwybyu26iwuh" path="res://bgm/探偵の日常.mp3" id="9_f7se1"]
[ext_resource type="AudioStream" uid="uid://batmxqpt643kh" path="res://bgm/button-124476.mp3" id="10_ri5v6"]
[ext_resource type="Texture2D" uid="uid://mq6ynu360k4k" path="res://art2/touch.png" id="11_q2dvy"]

[sub_resource type="Animation" id="Animation_qxtgi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dum8r"]
resource_name = "intro1"
length = 50.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vuer6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Sprites/intro1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Sprites/intro2:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(10.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_b7f68")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Sprites/intro2:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(10.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/Sprites/intro2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 10.1, 20.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(9.9, 19.9, 29.9, 39.9, 49.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"pause_anim"
}, {
"args": [],
"method": &"pause_anim"
}, {
"args": [],
"method": &"pause_anim"
}, {
"args": [],
"method": &"pause_anim"
}, {
"args": [],
"method": &"pause_anim"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/Balloon/Label:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 9.1, 10, 10.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/Balloon/Label2:visible_ratio")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(10.1, 19, 20, 20.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Control/Sprites/intro3:texture")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(20.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_bgt2e")]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Control/Sprites/intro3:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(20.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Control/Sprites/intro3:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 20.1, 30.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Control/Balloon/Label3:visible_ratio")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(20.1, 29, 30, 30.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Control/Sprites/intro4:texture")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(30.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_e40al")]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Control/Sprites/intro4:frame")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(30.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Control/Sprites/intro4:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 30.1, 40.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Control/Balloon/Label4:visible_ratio")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(30.1, 39, 40, 40.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Control/Sprites/intro5:texture")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(40.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_cvlai")]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Control/Sprites/intro5:frame")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(40.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("Control/Sprites/intro5:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0, 40.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("Control/Balloon/Label5:visible_ratio")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(40.1, 48, 49),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}

[sub_resource type="Animation" id="Animation_tq083"]
resource_name = "intro2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Sprites/intro2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_b7f68")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Sprites/intro2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Sprites/intro2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2j8dx"]
_data = {
"RESET": SubResource("Animation_qxtgi"),
"intro1": SubResource("Animation_dum8r"),
"intro2": SubResource("Animation_tq083")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_nv3gw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_235ry"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.345098, 0.345098, 0.345098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufjut"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcbqo"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t6i7a"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0.0862745, 0.0666667, 0.105882, 0.784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_5fdct"]
default_font = ExtResource("3_bbvun")
default_font_size = 12
Button/styles/disabled = SubResource("StyleBoxFlat_235ry")
Button/styles/focus = SubResource("StyleBoxFlat_ufjut")
Button/styles/hover = SubResource("StyleBoxFlat_fcbqo")
Button/styles/normal = SubResource("StyleBoxFlat_t6i7a")
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 8
MarginContainer/constants/margin_right = 8
MarginContainer/constants/margin_top = 4
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="Intro" type="Node"]
script = ExtResource("1_6kee1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2j8dx")
}
movie_quit_on_finish = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 331.0
offset_bottom = 190.0
texture = SubResource("CanvasTexture_nv3gw")

[node name="Sprites" type="Node2D" parent="Control"]
rotation = -0.0794502

[node name="intro1" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(152.192, 102.348)
rotation = 0.0782557
scale = Vector2(1.00521, 1.01053)
texture = ExtResource("2_vuer6")

[node name="intro2" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(152.71, 101.236)
rotation = 0.0782557
scale = Vector2(1.00601, 1.02377)
texture = ExtResource("4_b7f68")

[node name="intro3" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(151.815, 102.049)
rotation = 0.0782557
scale = Vector2(1.00683, 1.01186)
texture = ExtResource("6_bgt2e")

[node name="intro4" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(151.843, 102.052)
rotation = 0.0782557
scale = Vector2(1.007, 1.01187)
texture = ExtResource("7_e40al")

[node name="intro5" type="Sprite2D" parent="Control/Sprites"]
visible = false
position = Vector2(152.441, 102.218)
rotation = 0.0782557
scale = Vector2(1.00456, 1.01317)
texture = ExtResource("9_cvlai")

[node name="Balloon" type="Panel" parent="Control"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 71.0
offset_right = 278.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_5fdct")

[node name="Label" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_bbvun")
text = "Fuwamoco are twin sisters of The Demonic Guard Dogs. 
However in the demon world full of evil and hatred, 
the Fuwamoco sisters are too nice and cute. "
visible_characters = 0
visible_ratio = 0.0

[node name="Label2" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_bbvun")
text = "At the end, the high demon council decided to put 
them into prison until they were able to be proper 
demon dogs. "
visible_characters = 0
visible_ratio = 0.0

[node name="Label3" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_bbvun")
text = "Being in prison, Fuwamoco can’t do anything 
except accept fate. That is until Pero, their master, 
sneaks inside and helps them escape. "
visible_characters = 0
visible_ratio = 0.0

[node name="Label4" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_bbvun")
text = "Pero cast a powerful magic and then- 
Mococo suddenly sneezes at Pero, and a sudden 
explosion occur!"
visible_characters = 0
visible_ratio = 0.0

[node name="Label5" type="Label" parent="Control/Balloon"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("3_bbvun")
text = "Seems like the magic failed, and Pero turned 
everyone in the prison into monster?!"
visible_characters = 0
visible_ratio = 0.0

[node name="intro4_5" type="Sprite2D" parent="."]
visible = false
position = Vector2(156, 88)
rotation = -0.00119449
scale = Vector2(0.979, 1)
texture = ExtResource("8_r3mc4")

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_f7se1")
volume_db = -60.0
autoplay = true
bus = &"BGM"

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ri5v6")
volume_db = -50.0
bus = &"SFX"

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-12, -9)
scale = Vector2(1.075, 1.10556)
texture_normal = ExtResource("11_q2dvy")
texture_pressed = ExtResource("11_q2dvy")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
